[gd_scene load_steps=7 format=3 uid="uid://b4r1rf1grq16u"]

[ext_resource type="Script" path="res://Scenes/Mobs/MobHealth/mob_health.gd" id="1_h5lyy"]
[ext_resource type="Texture2D" uid="uid://ev27sawcfbqe" path="res://Assets/ProgressBars/empty_health_mob.png" id="2_j25b0"]
[ext_resource type="Texture2D" uid="uid://bu8obwuy7kgga" path="res://Assets/ProgressBars/progress_health_mob.png" id="3_bxx3c"]

[sub_resource type="Animation" id="Animation_ibtkw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ku4st"]
resource_name = "damage_text_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, -34), Vector2(-16, -63)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.231373), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0p1jm"]
_data = {
"RESET": SubResource("Animation_ibtkw"),
"damage_text_anim": SubResource("Animation_ku4st")
}

[node name="MobHealth" type="Node2D"]
script = ExtResource("1_h5lyy")

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -9.5
offset_right = 53.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
texture_under = ExtResource("2_j25b0")
texture_progress = ExtResource("3_bxx3c")

[node name="DamageText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -34.0
offset_right = 15.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.717647, 0.156863, 0, 1)
theme_override_colors/font_shadow_color = Color(0.247059, 0, 0, 1)
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MobHealthAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0p1jm")
}
